fix places grid bug: title not fitting

--- a/blocks/content/places/__grid/places__grid.css
+++ b/blocks/content/places/__grid/places__grid.css
@@ -2,8 +2,8 @@
   display: grid;
   margin: auto;
   padding: 0 0 80px;
-  grid-template-columns: fit-content(460px) fit-content(484px);
-  grid-template-rows: 67px 460px auto;
+  grid-template-columns: 460px fit-content(484px);
+  grid-template-rows: 152px 460px auto;
   gap: 40px;
   max-width: 984px;
 }
